restaurant/static/css/main.css
@font-face {
    font-family: "Quesha";
    src: url("../fonts/Quesha-gndR.ttf");
}

html, body {
    height: 100%;
}

body {
    font-family: "Quesha", Calibri, sans-serif;
}

html, body, ul, .page_wrap {
    margin: 0;
    padding: 0;
}

.home, .about, .menu {
    height: 100vh;
    position: relative;
}

.page_content {
    position: relative;
}

.home:before {
    content: '';
    display: block;
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100vh;
    opacity: 0.6;
    background: url("../images/rest_interior.jpg") no-repeat;
    background-size: cover;
}

.about:before {
    content: '';
    display: block;
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100vh;
    opacity: 0.6;
    background: url("../images/rest_int2.jpeg") no-repeat;
    background-size: cover;
}

.location_detail:before {
    content: '';
    display: block;
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100vh;
    opacity: 0.6;
    background: url("../images/basil_bg.jpg") no-repeat;
    background-size: cover;
}

.menu_detail:before {
    content: '';
    display: block;
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100vh;
    background: linear-gradient(to bottom, #8e9d57, #9cbb74);
    background-size: cover;
}

.menu:before {
    content: '';
    display: block;
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100vh;
    opacity: 0.6;
    background: url("../images/pasta_bg.jpg");
    background-size: cover;
}

.contact:before {
    content: '';
    display: block;
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100vh;
    opacity: 0.6;
    background: url("../images/rest_seating.jpg");
    background-size: cover;
}

.reserve:before {
    content: '';
    display: block;
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100vh;
    opacity: 0.6;
    background: url("../images/tomato_bg.jpg");
    background-size: cover;
}

nav {
    background-color: rgba(0, 0, 0, 0.3);
    position: sticky;
    top: 0;
    left: 0;
}

nav ul {
    display: flex;
    justify-content: space-around;
    list-style-type: none;
}

nav li {
    padding: 1.5rem;
}

nav a:link, nav a:visited {
    text-decoration: none;
    font-size: 1.7rem;
    font-weight: bold;
    letter-spacing: 0.2rem;
    color: #f7eabb;
    text-shadow: 0.1rem 0.1rem 0.5rem #191400;
}

nav a:hover, nav a:focus {
    color: #91e97a;
}

nav a:active {
    color: white;
}

.nav_btn {
    display: none;
}

.nav_icon {
    width: 3.5rem;
    border-radius: 0.5rem;
}

.main_wrap {
    width: 80%;
    margin: 0 auto;
}

.main_heading {
    color: #b2f4c2;
    font-size: 4rem;
    letter-spacing: 0.2rem;
    text-shadow: 0.1rem 0.1rem 1.9rem #030b00;
}

.main_heading, .page_heading {
    font-style: italic;
    font-weight: bold;
    text-align: center;
}

.page_heading {
    font-size: 3rem;
    color: #c2fba7;
    text-shadow: -0.6rem 0.6rem 1.9rem #000;
}

.home_menu {
    list-style-type: none;
    display: flex;
    justify-content: space-around;
}

.home_menu a:link, .home_menu a:visited {
    text-decoration: none;
    font-size: 2.5rem;
    font-weight: bold;
    letter-spacing: 0.1rem;color: #aff7bf;
    background-color: rgba(0, 25, 10, 0.5);

    padding: 1.5rem;
    border-radius: 2.5rem;
}

.home_menu a:hover, .home_menu a:focus {
    color: #579d65;
    background-color: rgba(0, 25, 10, 0.8);
}

.home_menu a:active {
    color: #00190A;
    background-color: #579d65;
}

h2, p {
    color: #eef9f0;
}

h2 {
    font-size: 2.3rem;
    letter-spacing: 0.1rem;
}

p, dt, label {
    font-size: 1.8rem;
    letter-spacing: 0.1rem;
}

dd, li {
    font-size: 1.6rem;
}

.text_block {
    background-color: rgba(0, 25, 10, 0.6);
    padding: 2.5rem;
    width: 70%;
    margin: auto;
    text-shadow: 0.2rem 0.2rem 1rem #011801;
    border-radius: 2rem;
}

.menu_card, .location ul {
    list-style-type: none;
}

.menu_card {
    background-color: rgba(25, 20, 0, 0.6);
    width: 40%;
    text-align: center;
}

.menu_card a:link, .menu_card a:visited, .location_card a:link, .location_card a:visited, .form_card a:link, .form_card a:visited {
    text-decoration: none;
    font-weight: bold;
    color: #b5fba7;
}

.menu_card a:focus, .menu_card a:hover, .location_card a:focus, .location_card a:hover, .form_card a:hover, .form_card a:focus {
    color: #74BB83;
}

.menu_card, .menu_item, .location_card, .location, .form_card {
    color: #f7eabb;
    border-radius: 1.2rem;
    margin: 1.1rem auto;
    padding: 1.1rem;
}

.menu_item {
    background-color: rgba(20, 80, 0, 0.4);
    display: grid;
    grid-template-columns: 35% 1fr;
    width: 70%;
    margin: auto;
}

.menu_image img, .location_iframe iframe {
    width: 100%;
    border-radius: 1.1rem;
    box-shadow: 0.2rem 0.2rem 1.5rem #000;
}

.menu_description p {
    font-size: 2.2rem;
}

.location_display {
    display: flex;
    justify-content: space-around;
}

.location_card, .form_card {
    background-color: rgba(25, 20, 0, 0.7);
    border-radius: 2.5rem;
    letter-spacing: 0.1rem;
}

.location_card dt {
    font-weight: bold;
    font-size: 2rem;
}

.location_card dd {
    margin-left: 0;
}

.location {
    font-weight: bold;
    letter-spacing: 0.1rem;
    background-color: rgba(20, 80, 0, 0.4);
    display: grid;
    grid-template-columns: 30% 1fr;
    width: 65%;
    margin: auto;
}

.location_iframe iframe {
    min-height: 20rem;
}

.form_card {
    width: 45%;
    margin: auto;
}

.form_input {
    padding: 0.2rem;
}

.submit_btn input {
    font-family: "Quesha", sans-serif;
    font-size: 1.8rem;
    border: none;
    border-radius: 1.9rem;
    padding: 1.2rem;
    font-weight: bold;
    letter-spacing: 0.1rem;
    color: #aff7bf;
    background-color: rgba(0, 25, 10, 0.5);
}

.submit_btn input:hover, .submit_bt input:focus {
    background-color: #aff7bf;
    color: rgba(0, 25, 10, 0.5);
}

.submit_btn input:active {
    color: #91e97a;
    background-color: #191400;
}

.response_message li {
    list-style-type: none;
    position: absolute;
    top: 10rem;
    left: 35rem;
    width: 25rem;
    padding: 1.5rem;
    border-radius: 2.5rem;
}

.success {
    color: #aff7bf;
    background-color: rgba(0, 25, 10, 0.9);
}

a.response_btn:link, a.response_btn:visited {
    display: block;
    color: #aff7bf;
}

a.response_btn:hover, a.response_btn:focus {
    color: #91e97a;
}

@media screen and (max-width: 480px) {
    nav ul, .home_menu {
        display: block;
        text-align: center;
    }

    .main_heading {
        font-size: 2.1rem;
    }

    .nav_btn {
        display: block;
        padding: 0.5rem;
    }

    nav {
        display: none;
    }

    nav.show {
        display: block;
    }
}

